Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24569

section.property cannot deal with nested properties

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 5.0.0
    • None
    • qtpim 2900a6c31b631a4383630124fb9d1f76752a0b35
      qtdeclarative ef6318ae38322b5a4a0619b581924290f114fa74
    • 2d1c7f6348943b9adbab3b940d17896c15636156

    Description

      If a model contains roles with their own properties (such as objects) they cannot be used in section.property.

      A roughly realistic example is modifying the qtpim contacts example (qtpim/examples/qmlcontactslistview) with the attached patch. This makes it try to add section headers by first name (contact.name.firstName), a data member used successfully in the delegate but not in the section headers.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes